<resources>
    <string name="app_name">LoveDays</string>
    <string name="myName">Your Name</string>
    <string name="hisherName">His/Her Name</string>
    <string name="yourMobileNumber">Your Number - Optional</string>
    <string name="startingDate">When did your relationship begin?</string>
    <string name="clearAll">clear</string>
    <string name="start">start</string>
    <string name="date_cannot_be_later_than_today">Date cannot be later than today</string>
    <string name="msg_empty_your_name">enter your name</string>
    <string name="msg_empty_their_name">enter your lover\'s name</string>
    <string name="msg_wrong_mobile_number">enter correct mobile number</string>
    <string name="upcoming">upcoming</string>
    <string name="error">error!!</string>
    <string name="in_love_since">in Love for \n\n %1$d days♡</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="set_new_name">set new name</string>
    <string name="set_your_new_phrase">set your new phrease</string>
</resources>
