<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="w"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/etMyName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/etTheirName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            android:hint="@string/myName" />

        <EditText
            android:id="@+id/etTheirName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMyName"
            app:layout_constraintBottom_toTopOf="@+id/etMobileNumber"
            android:hint="@string/hisherName"/>
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTheirName"
            app:layout_constraintWidth_percent="0.5"
            android:hint="@string/yourMobileNumber"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobileNumber"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/startingDate"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="20dp"
            android:text="@string/clearAll"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/start"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>